2008-06-20  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/treeview.tcl: Backport fix for [Bug 1951733]

2008-06-19  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.3 release.

2008-06-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXCarbonEvents.c:	fix debug carbon event tracing;
	(InstallStandardApplicationEventHandler):	replace needless use of
	TkMacOSXInitNamedDebugSymbol() by standard TkMacOSXInitNamedSymbol().

	* macosx/tkMacOSXDebug.c:	revert 2007-11-09 commit making
	* macosx/tkMacOSXDebug.h:	TkMacOSXInitNamedDebugSymbol()
					available outside of debug builds.

	* macosx/tkMacOSXEmbed.c (TkpMakeWindow):	fix bug with missing
	* macosx/tkMacOSXSubwindows.c (XMapWindow):	focus on first map by
	only sending VisibilityNotify events once windows are mapped (rather
	than when they are created).

	* macosx/tkMacOSXWindowEvent.c (TkMacOSXProcessWindowEvent): fix
	return value.

	* macosx/tkMacOSXInit.c:	add helper to efficiently convert from
	* macosx/tkMacOSXPrivate.h:	CFString to Tcl_Obj.

	* macosx/tkMacOSXFont.c (TkpGetFontFromAttributes, InitFont):	fix
	incorrect conversion to points of font sizes already in points; factor
	out retrieval of font family name from font family ID.

2008-06-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure, win/configure.in (TK_WIN_VERSION): fix handling
	of interim a/b versioning for manifest usage.

2008-06-12  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkPointer.c (Tk_UpdatePointer): fix failure to restore a
	global grab capture and to release the restrict window capture when
	releasing a button grab. Fixes segfault due to dangling reference to
	restrict window inside TkpSetCapture() implementation. [Bug 1991932]

	* unix/tcl.m4 (SunOS-5.11): fix 64bit amd64 support with gcc & Sun cc.
	* unix/configure: autoconf-2.59

	* macosx/tkMacOSXXStubs.c (Tk_ResetUserInactiveTime): use UsrActivity