@@ -2,7 +2,7 @@ This file summarizes all changes made to Tk since version 1.0 was
 released on March 13, 1991.  Changes that aren't backward compatible
 are marked specially.
 
-RCS: @(#) $Id: changes,v 1.130.2.2 2008/06/20 13:57:51 das Exp $
+RCS: @(#) $Id: changes,v 1.130.2.3 2008/06/26 21:26:08 dgp Exp $
 
 3/16/91 (bug fix) Modified tkWindow.c to remove Tk's Tcl commands from
 the interpreter when the main window is deleted (otherwise there will
@@ -6507,8 +6507,6 @@ Several documentation and release notes improvements
 2008-04-07 (bug fix)[1936238] wish -h mem explosion (bachmann,kenny)
 
 2008-04-14 (bug fix)[1941740] [tk_chooseColor -title] (thoyts)
-
-2008-04-16 (interface)[1938497] make stubs tables 'static const' (steffen)
 
 2008-04-17 (bug fix)[1327482] canvas item <Enter> events (wangnick)
 
